# AdventOfCode2020

day_01/: Cargo.toml
day_01/src/: main.rs
day_02/: Cargo.toml
day_02/src/: main.rs
day_03/: .gitignore  Cargo.toml
day_03/src/: main.rs
day_04/src/: main.rs
day_05/src/: main.rs
day_06/src/: main.rs
