[package]
name = "day_02"
version = "0.1.0"
authors = ["Trevor Berninger <baladashman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
regex = "1.4.2"
#lazy_static = "1.4.0"
re-parse = "0.1.0"
serde_derive = "1.0.117"
serde = "1.0.117"
